# softcommerce

./: requirements.txt
django_utilities/: LICENSE  README.rst  setup.cfg
django_utilities/django_utilities.egg-info/: PKG-INFO  SOURCES.txt
django_utilities/utilities/: urls.py  views.py
django_utilities/utilities.egg-info/: PKG-INFO  SOURCES.txt
utilitiespackage/: settings.py  urls.py
