[metadata]
name = django-utilities
version = 1.2.3
description = Django common utilities
long_description = file:README.rst
author = Ifte Samul Ohy
author_email= iftesamulohy@gmail.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

license = MIT
keywords = django utilities
install_requires = [
    'Django',
    'django-ckeditor',
    'django-fontawesome-5',
    'django-solo',
    'djangorestframework',
    'pillow'
    ]


[options]
include_package_data = true